# Solidit-4.0-AI

./: .env.example  .gitignore  ADMIN_PORTAL_SPEC.md  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  CLAUDE.md  DATABASE_SCHEMA.md  DEPLOY.md  HANDOFF.md  MOBILE_APP_SPEC.md  Makefile  NEW_CONVERSATION_PROMPT.md  PRODUCT_SPEC.md  README.md  ROADMAP_SPRINT.md  SECURITY_COMPLIANCE.md  VISION_ENGINE_SPEC.md  render.yaml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/account/: __init__.py  router.py
backend/app/accreditation/: router.py  service.py
backend/app/ai_lab/: __init__.py
backend/app/articles/: __init__.py  router.py  schemas.py  service.py
backend/app/audit/: __init__.py
backend/app/auth/: router.py  schemas.py  service.py  tokens.py
backend/app/batches/: __init__.py  router.py  schemas.py  service.py
backend/app/billing/: __init__.py  deps.py  router.py  service.py
backend/app/brand_specs/: __init__.py  router.py  schemas.py  service.py
backend/app/calibration/: router.py  schemas.py  service.py
backend/app/common/: audit.py  (+8 more)
backend/tests/: conftest.py  test_accreditation.py  test_articles.py  test_auth.py  test_billing.py  test_calibration.py  test_capitolato.py  test_certified_white.py  test_colorimetry.py  test_db_session.py  test_grey_scale.py  test_hardening.py  test_health.py  test_method_documents.py  test_quality_domain.py  test_repeatability.py  test_reports.py  test_sales_smoke.py  test_segmentation.py  test_smoke_full_cycle.py  test_spectral.py  test_strip_profiles.py  test_team_members.py  test_tenant_isolation.py  test_validation.py  test_vision.py
(+194 files in other folders)
