[project]
name = "solidita-backend"
version = "0.1.0"
description = "Solidità 4.0 — textile quality control SaaS backend (Trace + Vision)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
    "reportlab>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio>=4.4",
    "ruff>=0.5",
]
# Vision engine deps (lazy-imported in app.vision; base app installs without them).
vision = [
    "numpy>=1.26",
    "scikit-image>=0.23",
    "scipy>=1.11",
    "Pillow>=10.2",
    "opencv-python-headless>=4.9",  # ArUco markers + homography (geometry.py/markers.py)
]
# Production object storage (S3 / R2 / MinIO / B2). Lazy-imported in storage.py.
storage = [
    "boto3>=1.34",
]
# Billing (Stripe). Lazy-imported in app.billing; base app installs without it.
billing = [
    "stripe>=9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic
